--- a/tex/1.bib
+++ b/tex/1.bib
@@ -22,6 +22,13 @@
   publisher={Erlbaum Mahwah, NJ}
 }
 
+@INPROCEEDINGS{Dang06overviewof,
+    author = {Hoa Trang Dang},
+    title = {Overview of DUC 2006},
+    booktitle = {In Proceedings of HLT-NAACL 2006},
+    year = {2006}
+}
+
 @inproceedings{bird2004nltk,
   title={NLTK: the natural language toolkit},
   author={Bird, Steven and Loper, Edward},
@@ -67,6 +74,22 @@
   pages={142--147},
   year={2003},
   organization={Association for Computational Linguistics}
+}
+
+@inproceedings{Blei2003LatentDA,
+  title={Latent Dirichlet Allocation},
+  author={David M. Blei and Andrew Y. Ng and Michael I. Jordan},
+  booktitle={NIPS},
+  year={2003}
+}
+
+@article{Och2003ASC,
+  title={A Systematic Comparison of Various Statistical Alignment Models},
+  author={Franz Josef Och and Hermann Ney},
+  journal={Computational Linguistics},
+  year={2003},
+  volume={29},
+  pages={19-51}
 }
 
 @article{russell2002artificial,
@@ -122,6 +145,22 @@
   year={2001}
 }
 
+@article{Kilgarriff2000IntroductionTT,
+  title={Introduction to the Special Issue on SENSEVAL},
+  author={Adam Kilgarriff and Martha Palmer},
+  journal={Computers and the Humanities},
+  year={2000},
+  volume={34},
+  pages={1-13}
+}
+
+@inproceedings{Voorhees1999TheTQ,
+  title={The TREC-8 Question Answering Track Evaluation},
+  author={Ellen M. Voorhees and Dawn M. Tice},
+  booktitle={TREC},
+  year={1999}
+}
+
 @book{manning1999foundations,
   title={Foundations of statistical natural language processing},
   author={Manning, Christopher D and Manning, Christopher D and Sch{\"u}tze, Hinrich},
@@ -169,6 +208,15 @@
   organization={ACM}
 }
 
+@article{Berger1996AME,
+  title={A Maximum Entropy Approach to Natural Language Processing},
+  author={Adam L. Berger and Stephen Della Pietra and Vincent J. Della Pietra},
+  journal={Computational Linguistics},
+  year={1996},
+  volume={22},
+  pages={39-71}
+}
+
 @book{charniak1996statistical,
   title={Statistical language learning},
   author={Charniak, Eugene},
@@ -181,6 +229,15 @@
   author={Allen, James},
   year={1995},
   publisher={Pearson}
+}
+
+@article{Cortes1995SupportvectorN,
+  title={Support-vector networks},
+  author={Corinna Cortes and Vladimir Vapnik},
+  journal={Machine Learning},
+  year={1995},
+  volume={20},
+  pages={273-297}
 }
 
 @article{shieber1994lessons,
@@ -201,6 +258,13 @@
   publisher={MIT Press}
 }
 
+@inproceedings{Boser1992ATA,
+  title={A Training Algorithm for Optimal Margin Classifiers},
+  author={Bernhard E. Boser and Isabelle Guyon and Vladimir Vapnik},
+  booktitle={COLT},
+  year={1992}
+}
+
 @inproceedings{baker1990stochastic,
   title={Stochastic modeling for automatic speech understanding},
   author={Baker, James K},
@@ -216,11 +280,26 @@
   organization={Mid-America Linguistics Conference}
 }
 
+@article{Brown1990ASA,
+  title={A Statistical Approach to Machine Translation},
+  author={Peter F. Brown and John Cocke and Stephen Della Pietra and Vincent J. Della Pietra and Frederick Jelinek and John D. Lafferty and Robert L. Mercer and Paul S. Roossin},
+  journal={Computational Linguistics},
+  year={1990},
+  volume={16},
+  pages={79-85}
+}
+
 @book{gazdar1989natural,
   title={Natural language processing in Lisp: An introduction to computational linguistics},
   author={Gazdar, Gerald and Mellish, Christopher S},
   year={1989},
   publisher={Addison-Wesley Wokingham, England}
+}
+@inproceedings{Pearl1988ProbabilisticRI,
+  title={Probabilistic reasoning in intelligent systems - networks of plausible inference},
+  author={Judea Pearl},
+  booktitle={Morgan Kaufmann series in representation and reasoning},
+  year={1988}
 }
 
 @book{Pereira:1987:PNL:576399,
