--- a/tex/1.tex
+++ b/tex/1.tex
@@ -266,15 +266,15 @@ Năm năm cuối của thiên niên trải qua sự thay đổi to lớn trong l
 
 \subsection{Sự phát triển của học máy: 2000-2007}
 
-Xu hướng theo chủ nghĩa kinh nghiệm bắt đầu vào cuối những năm 1990 đã bắt đầu tăng tốc với tốc độ đáng kinh ngạc trong thế kỷ mới. Sự tăng tốc này xuất phát từ ba xu hướng. Đầu tiên, một lượng lớn các dữ liệu tiếng nói và văn bản ra đời với sự hỗ trợ của Linguistic Data Consortium (LDA) và các tổ chức tương tự. Trong các tài nguyên này có các tập dữ liệu được gán nhãn như Penn Treebank \citep{marcus1993building}, Prague Dependency Treebank \citep{hajic:1998}, PropBank \citep{palmer2005proposition}, Penn Discourse Treebank \citep{miltsakaki2004penn}, RSTBank \citep{carlson2001discourse} và TimeBank \citep{pustejovsky2003timebank}, tất cả các nguồn dữ liệu này đã hình thành các tầng ngữ liệu tiêu chuẩn cho các bài toán ngữ pháp, ngữ nghĩa và ngữ dụng. Sự xuất hiện của các tài nguyên này thúc đẩy xu hướng chuyển các bài toán phức tạp truyền thống, như parsing hay phân tích cảm xúc, trở thành các bài toán học máy có giám sát. Các nguồn tài nguyên này cũng thúc đẩy việc ra đời của các cuộc thi đánh giá cho các bài toán parsing \citep{sang2001introduction}, trích rút thông tin (NIST, \citeyear{nist2007}; Sang, \citeyear{TjongKimSang:2002:ICS:1118853.1118877}; Sang và De Meulder, \citeyear{tjong2003introduction}), khử nhập nhằng nghĩa từ (Palmer et al., \citeyear{Palmer:2001:ETA:2387364.2387369}; Kilgarriff và Palmer, 2000), hỏi đáp (Voorhees và Tice, 1999), và tóm tắt văn bản (Dang 2006).
+Xu hướng theo chủ nghĩa kinh nghiệm bắt đầu vào cuối những năm 1990 đã bắt đầu tăng tốc với tốc độ đáng kinh ngạc trong thế kỷ mới. Sự tăng tốc này xuất phát từ ba xu hướng. Đầu tiên, một lượng lớn các dữ liệu tiếng nói và văn bản ra đời với sự hỗ trợ của Linguistic Data Consortium (LDA) và các tổ chức tương tự. Trong các tài nguyên này có các tập dữ liệu được gán nhãn như Penn Treebank \citep{marcus1993building}, Prague Dependency Treebank \citep{hajic:1998}, PropBank \citep{palmer2005proposition}, Penn Discourse Treebank \citep{miltsakaki2004penn}, RSTBank \citep{carlson2001discourse} và TimeBank \citep{pustejovsky2003timebank}, tất cả các nguồn dữ liệu này đã hình thành các tầng ngữ liệu tiêu chuẩn cho các bài toán ngữ pháp, ngữ nghĩa và ngữ dụng. Sự xuất hiện của các tài nguyên này thúc đẩy xu hướng chuyển các bài toán phức tạp truyền thống, như parsing hay phân tích cảm xúc, trở thành các bài toán học máy có giám sát. Các nguồn tài nguyên này cũng thúc đẩy việc ra đời của các cuộc thi đánh giá cho các bài toán parsing \citep{sang2001introduction}, trích rút thông tin (NIST, \citeyear{nist2007}; Sang, \citeyear{TjongKimSang:2002:ICS:1118853.1118877}; Sang và De Meulder, \citeyear{tjong2003introduction}), khử nhập nhằng nghĩa từ (Palmer et al., \citeyear{Palmer:2001:ETA:2387364.2387369}; Kilgarriff và Palmer, \citeyear{Kilgarriff2000IntroductionTT}), hỏi đáp (Voorhees và Tice, \citeyear{Voorhees1999TheTQ}), và tóm tắt văn bản (Dang \citeyear{Dang06overviewof}).
 
-Thứ hai, việc tập trung hơn vào quá trình học dẫn đến sự tương tác sâu hơn với cộng đồng học máy thống kê. Các kỹ thuật như support vector machines (Boser et al., 1992; Vapnik, 1995), maximum entropy và các thuật toán tương tự như multinomial logistic regression (Berger et al., 1996), graphical Bayesian models (Pearl, 1988) trở thành tiêu chuẩn trong cộng đồng ngôn ngữ học tính toán. Thứ ba, việc phát triển rộng khắp của các hệ thống máy tính hiệu năng cao giúp cải tiến quá trình huấn luyện và triển khai mà không thể xuất hiện ở thập kỷ trước.
+Thứ hai, việc tập trung hơn vào quá trình học dẫn đến sự tương tác sâu hơn với cộng đồng học máy thống kê. Các kỹ thuật như support vector machines (Boser et al., \citeyear{Boser1992ATA}; Vapnik, \citeyear{Cortes1995SupportvectorN}), maximum entropy và các thuật toán tương tự như multinomial logistic regression \citep{Berger1996AME}, graphical Bayesian models \citep{Pearl1988ProbabilisticRI} trở thành tiêu chuẩn trong cộng đồng ngôn ngữ học tính toán. Thứ ba, việc phát triển rộng khắp của các hệ thống máy tính hiệu năng cao giúp cải tiến quá trình huấn luyện và triển khai mà không thể xuất hiện ở thập kỷ trước.
 
-Cuối cùng, ở cuối giai đoạn này, các phương pháp tiếp cận không giám sát cũng nhận được sự quan tâm. Từ các cách tiếp cận thống kê đến dịch máy (Brown et al., 1990; Och và Ney, 2003) và topic modeling (Blei et al., 2003) thể hiện các hệ thống cũng có thể được huấn luyện hiệu quả từ các dữ liệu chưa gán nhãn. Thêm vào đó, giá cả và sự khó khăn trong việc đảm bảo chất lượng cho các ngữ liệu có nhãn là một nhược điểm của các phương pháp học giám sát trong rất nhiều bài toán. Xu hướng sử dụng các kỹ thuật không giám sát sẽ ngày càng tăng.
+Cuối cùng, ở cuối giai đoạn này, các phương pháp tiếp cận không giám sát cũng nhận được sự quan tâm. Từ các cách tiếp cận thống kê đến dịch máy (Brown et al., \citeyear{Brown1990ASA}; Och và Ney, \citeyear{Och2003ASC}) và topic modeling \citep{Blei2003LatentDA} thể hiện các hệ thống cũng có thể được huấn luyện hiệu quả từ các dữ liệu chưa gán nhãn. Thêm vào đó, giá cả và sự khó khăn trong việc đảm bảo chất lượng cho các ngữ liệu có nhãn là một nhược điểm của các phương pháp học giám sát trong rất nhiều bài toán. Xu hướng sử dụng các kỹ thuật không giám sát sẽ ngày càng tăng.
 
 \subsection{Các phát hiện đồng thời}
 
-Mặc dù trong phần lược sử này, chúng tôi đã nêu ra nhiều trường hợp về các phát hiện đồng thời cho cùng một ý tưởng. Chỉ một vài trường hợp "đồng thời" này sẽ được thảo luận trong cuốn sách như ứng dụng của quy hoạch động đối với so sánh chuỗi bởi \citet{viterbi1967error}, \citet{vintsyuk1968speech}, \citet{needleman1970general}, \citet{sakoe1971dynamic}, \citet{sankoff1972matching}, \citet{reichert1973application}, và \citet{wagner1974string} (chương 3, 5 và 6), HMM/noisy channel trong nhận dạng tiếng nói bởi \citet{baker1990stochastic} và của \citet{jelinek1976continuous}, \citet{bahl1986maximum} (chương 6, 9 và 10); sự phát triển của context-free grammars bởi \citet{chomsky1963formal} và bởi \citet{backus1959syntax} (chương 12); chứng minh Swiss-German có một cú pháp không phụ thuộc ngữ cảnh bởi \citet{huybregts1984weak} và bởi \citet{shieber1985evidence} (chương 15); ứng dụng của sự thống nhất trong xử lý ngôn ngữ bởi \citet{colmerauer1996birth} và bởi \citet{kay1999grammatical} (chương 16)
+Mặc dù trong phần lược sử này, chúng tôi đã nêu ra nhiều trường hợp về các phát hiện đồng thời cho cùng một ý tưởng. Chỉ một vài trường hợp "đồng thời" này sẽ được thảo luận trong cuốn sách như ứng dụng của quy hoạch động đối với so sánh chuỗi bởi \citet{viterbi1967error}, \citet{vintsyuk1968speech}, \citet{needleman1970general}, \citet{sakoe1971dynamic}, \citet{sankoff1972matching}, \citet{reichert1973application}, và \citet{wagner1974string} (chương 3, 5 và 6), HMM/noisy channel trong nhận dạng tiếng nói bởi \citet{baker1990stochastic} và của \citet{jelinek1976continuous}, \citet{bahl1986maximum} (chương 6, 9 và 10); sự phát triển của context-free grammars bởi \citet{chomsky1963formal} và bởi \citet{backus1959syntax} (chương 12); chứng minh Swiss-German có một cú pháp không phụ thuộc ngữ cảnh bởi \citet{huybregts1984weak} và bởi \citet{shieber1985evidence} (chương 15); ứng dụng của sự thống nhất trong xử lý ngôn ngữ bởi \citeauthor{colmerauer1996birth} và bởi \citet{kay1999grammatical} (chương 16)
 
 Những trường hợp này có phải là sự trùng hợp đáng kinh ngạc hay không? Một giả thuyết nổi tiếng bởi nhà xã hội học \citet{merton1961social} lập luận, hoàn toàn ngược lại
 
