--- a/util/layout/begin.tex
+++ b/util/layout/begin.tex
@@ -94,6 +94,13 @@
 \makeatother
 \bookmark[page=1,level=-2]{Sample document}
 
+% ######################################
+%             SPECIAL CHARACTERS
+% ######################################
+\def\textvisiblespace{%
+   \mbox{\kern.06em\vrule height.3ex}%
+   \vbox{\hrule width.3em}%
+   \hbox{\vrule height.3ex}}
 
 \title{Xử lý ngôn ngữ và tiếng nói}
 
