--- a/tex/1.bib
+++ b/tex/1.bib
@@ -170,9 +170,10 @@
 
 @article{kay1999grammatical,
   title={Grammatical constructions and linguistic generalizations: the What's X doing Y? construction},
-  author={Kay},
+  author={Kay, Paul and Fillmore, Charles J},
   journal={Language},
   pages={1--33},
+  year={1999},
   publisher={JSTOR}
 }
 
@@ -217,13 +218,6 @@
   pages={39-71}
 }
 
-@book{charniak1996statistical,
-  title={Statistical language learning},
-  author={Charniak, Eugene},
-  year={1996},
-  publisher={MIT press}
-}
-
 @book{allen1995natural,
   title={Natural language understanding},
   author={Allen, James},
@@ -245,6 +239,15 @@
   author={Shieber, Stuart M},
   journal={arXiv preprint cmp-lg/9404002},
   year={1994}
+}
+
+@inproceedings{charniak1993equations,
+  title={Equations for part-of-speech tagging},
+  author={Charniak, Eugene and Hendrickson, Curtis and Jacobson, Neil and Perkowitz, Mike},
+  booktitle={AAAI},
+  volume={93},
+  pages={784--789},
+  year={1993}
 }
 
 @article{marcus1993building,
@@ -270,6 +273,7 @@
   author={Baker, James K},
   booktitle={Readings in speech recognition},
   pages={297--307},
+  year={1990},
   organization={Morgan Kaufmann Publishers Inc.}
 }
 
@@ -318,28 +322,21 @@
   year={1986},
   publisher={Kaufman Publishers Inc., Los Altos, CA}
 
-@inproceedings{bahl1986maximum,
-  title={Maximum mutual information estimation of hidden Markov model parameters for speech recognition},
-  author={Bahl and Mercer},
-  booktitle={Acoustics, Speech, and Signal Processing, IEEE International Conference on ICASSP'86.},
-  volume={11},
-  pages={49--52},
-  organization={IEEE}
-}
-
 @incollection{shieber1985evidence,
   title={Evidence against the context-freeness of natural language},
-  author={Shieber},
+  author={Shieber, Stuart M},
   booktitle={Philosophy, Language, and Artificial Intelligence},
   pages={79--89},
+  year={1985},
   publisher={Springer}
 }
 
 @article{huybregts1984weak,
   title={The weak inadequacy of context-free phrase structure grammars},
-  author={Huybregts},
+  author={Huybregts, Riny},
   journal={Van periferie naar kern},
   pages={81--99},
+  year={1984},
   publisher={Foris Dordrecht}
 }
 
@@ -356,6 +353,16 @@ number="",
 pages="267-330",
 URL="https://ci.nii.ac.jp/naid/10000030796/en/",
 DOI="",
+}
+
+@article{bahl1983maximum,
+  title={A maximum likelihood approach to continuous speech recognition},
+  author={Bahl, Lalit R and Jelinek, Frederick and Mercer, Robert L},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  number={2},
+  pages={179--190},
+  year={1983},
+  publisher={IEEE}
 }
 
 @article{wilensky1983planning,
@@ -587,6 +594,7 @@ author = "Philip R. Cohen and C. Raymond Perrault"
   volume={21},
   number={1},
   pages={168--173},
+  year={1974},
   publisher={ACM}
 }
 
@@ -597,26 +605,29 @@ author = "Philip R. Cohen and C. Raymond Perrault"
   volume={42},
   number={2},
   pages={245--261},
+  year={1973},
   publisher={Elsevier}
 }
 
 @article{sankoff1972matching,
   title={Matching sequences under deletion/insertion constraints},
-  author={Sankoff},
+  author={Sankoff, David},
   journal={Proceedings of the National Academy of Sciences},
   volume={69},
   number={1},
   pages={4--6},
+  year={1972},
   publisher={National Acad Sciences}
 }
 
 @article{jelinek1976continuous,
   title={Continuous speech recognition by statistical methods},
-  author={Jelinek},
+  author={Jelinek, Frederick},
   journal={Proceedings of the IEEE},
   volume={64},
   number={4},
-  pages={532--556}
+  pages={532--556},
+  year={1976},
   publisher={IEEE}
 }
 
@@ -651,17 +662,19 @@ author = "Philip R. Cohen and C. Raymond Perrault"
 
 @inproceedings{sakoe1971dynamic,
   title={Dynamic-programming approach to continuous speech recognition},
-  author={Sakoe and Chiba},
-  booktitle={1971 Proc. the International Congress of Acoustics, Budapest}
+  author={Sakoe, Hiroaki},
+  booktitle={1971 Proc. the International Congress of Acoustics, Budapest},
+  year={1971}
 }
 
 @article{needleman1970general,
   title={A general method applicable to the search for similarities in the amino acid sequence of two proteins},
-  author={Needleman and Wunsch},
+  author={Needleman, Saul B and Wunsch, Christian D},
   journal={Journal of molecular biology},
   volume={48},
   number={3},
   pages={443--453},
+  year={1970},
   publisher={Elsevier}
 }
 
@@ -693,21 +706,22 @@ author = "Philip R. Cohen and C. Raymond Perrault"
 
 @article{vintsyuk1968speech,
   title={Speech discrimination by dynamic programming},
-  author={Vintsyuk},
+  author={Vintsyuk, Taras K},
   journal={Cybernetics},
   volume={4},
   number={1},
   pages={52--57},
+  year={1968},
   publisher={Springer}
 }
-
 @article{viterbi1967error,
   title={Error bounds for convolutional codes and an asymptotically optimum decoding algorithm},
-  author={Viterbi},
+  author={Viterbi, Andrew},
   journal={IEEE transactions on Information Theory},
   volume={13},
   number={2},
   pages={260--269},
+  year={1967},
   publisher={IEEE}
 }
 
@@ -753,10 +767,11 @@ author = "Philip R. Cohen and C. Raymond Perrault"
 
 @article{chomsky1963formal,
   title={Formal properties of grammars},
-  author={Chomsky},
+  author={Chomsky, Noam},
   journal={Handbook of Math. Psychology},
   volume={2},
-  pages={328--418}
+  pages={328--418},
+  year={1963}
 }
 
 @book{harris1962string,
@@ -765,6 +780,17 @@ author = "Philip R. Cohen and C. Raymond Perrault"
   number={1},
   year={1962},
   publisher={Mouton}
+}
+
+@article{backus1961report,
+  title={Report on the algorithmic language ALGOL-60},
+  author={Backus, JW and Bauer, FL and Green, J and Katz, C and McCarthy, J and Naur, P and Perlis, AJ and Rutishauser, H and Samelson, K and Vauquois, B and others},
+  journal={Zhurnal Vychislitel'noi Matematiki i Matematicheskoi Fiziki},
+  volume={1},
+  number={2},
+  pages={308--342},
+  year={1961},
+  publisher={Russian Academy of Sciences, Branch of Mathematical Sciences}
 }
 
 @article{merton1961social,
@@ -797,12 +823,6 @@ author = "Philip R. Cohen and C. Raymond Perrault"
             year = {1959},
         keywords = {language, behaviorism, universal grammar, learning, Skinner, syntax, learnability, cognition},
              url = {http://cogprints.org/1148/}
-}
-
-@article{backus1959syntax,
-  title={The syntax and semantics of the proposed international algebraic language of the Zurich ACM-GAMM conference},
-  author={Backus and Naur},
-  journal={Proceedings of the International Comference on Information Processing, 1959}
 }
 
 @inproceedings{bledsoe1959pattern,
